--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <title>Space SIP</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app">
+      
+    </div>
     <script type="module" src="/src/main.js"></script>
     <script src="https://kit.fontawesome.com/80c5787b1a.js" crossorigin="anonymous"></script>
   </body>
